--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,3 +10,7 @@ quarkus.hibernate-orm.database.generation=none
 quarkus.flyway.schemas=importacao-distribuida
 quarkus.flyway.create-schemas=false
 quarkus.flyway.migrate-at-start=true
+
+# Test
+%test.quarkus.datasource.db-kind=h2
+%test.quarkus.datasource.jdbc.url=jdbc:h2:mem:default;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS `importacao-distribuida`
