Ajustando propriedades da aplicação

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -3,7 +3,7 @@ quarkus.datasource.db-kind=mysql
 %dev.quarkus.datasource.username=importacao_distribuida
 %dev.quarkus.datasource.password=importacao_distribuida
 %dev.quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/importacao_distribuida
-#quarkus.hibernate-orm.database.default-schema=importacao_distribuida
+quarkus.hibernate-orm.database.default-schema=importacao_distribuida
 quarkus.hibernate-orm.database.generation=none
 
 # Flyway
