Implementando endpoint para iniciar uma importação
- Atualização do DTO para receber o arquivo carregado

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,7 @@
+# Swagger
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/importacao-swagger
+
 # Datasource
 quarkus.datasource.db-kind=mysql
 %dev.quarkus.datasource.username=importacao_distribuida
