--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -18,3 +18,8 @@ quarkus.flyway.migrate-at-start=true
 # Test
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:default;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS `importacao_distribuida`
+
+
+# Azure
+%dev.upload.azure.account=UseDevelopmentStorage=true;
+%test.upload.azure.account=UseDevelopmentStorage=true;
