--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,9 +1,13 @@
+# Swagger
+quarkus.swagger-ui.always-include=true
+quarkus.swagger-ui.path=/importacao-swagger
+
 # Datasource
 quarkus.datasource.db-kind=mysql
 %dev.quarkus.datasource.username=importacao_distribuida
 %dev.quarkus.datasource.password=importacao_distribuida
 %dev.quarkus.datasource.jdbc.url=jdbc:mysql://localhost:3306/importacao_distribuida
-#quarkus.hibernate-orm.database.default-schema=importacao_distribuida
+quarkus.hibernate-orm.database.default-schema=importacao_distribuida
 quarkus.hibernate-orm.database.generation=none
 
 # Flyway
@@ -14,3 +18,8 @@ quarkus.flyway.migrate-at-start=true
 # Test
 %test.quarkus.datasource.db-kind=h2
 %test.quarkus.datasource.jdbc.url=jdbc:h2:mem:default;MODE=MYSQL;INIT=CREATE SCHEMA IF NOT EXISTS `importacao_distribuida`
+
+
+# Azure
+%dev.upload.azure.account=UseDevelopmentStorage=true;
+%test.upload.azure.account=UseDevelopmentStorage=true;
