--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -14,5 +14,15 @@ services:
     networks:
       - importacao-distribuida
 
+  azurite:
+    image: mcr.microsoft.com/azure-storage/azurite
+    hostname: azurite
+    ports:
+      - "10000:10000"
+      - "10001:10001"
+      - "10002:10002"
+    networks:
+      - importacao-distribuida
+
 networks:
   importacao-distribuida:
