Configurando Cors no servidor

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # Swagger
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/importacao-swagger
+quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:3000
 
 # Datasource
 quarkus.datasource.db-kind=mysql
