Movendo docker compose para a pasta raiz

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
 
-  database:
+  database-importacao:
     image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -11,6 +11,18 @@ services:
       MYSQL_PASSWORD: importacao_distribuida
     ports:
       - 3306:3306
+    networks:
+      - importacao-distribuida
+
+  database-crm:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: crm
+      MYSQL_USER: crm
+      MYSQL_PASSWORD: crm
+    ports:
+      - 3307:3306
     networks:
       - importacao-distribuida
 
