Implementação da rotina de importação (#7)
* Criando projeto para as rotinas de importação

* Movendo docker compose para a pasta raiz

* Criando script base do banco do crm

* Criando base do método de importação

* Configurando EntityFramework no projeto

* Criando modelos restantes

- Ajustando script de banco do CRM

* Implementando gravação dos dados

* Adicionando documentação ao código

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
 
-  database:
+  database-importacao:
     image: mysql
     environment:
       MYSQL_ROOT_PASSWORD: root
@@ -11,6 +11,20 @@ services:
       MYSQL_PASSWORD: importacao_distribuida
     ports:
       - 3306:3306
+    networks:
+      - importacao-distribuida
+
+  database-crm:
+    image: mysql
+    environment:
+      MYSQL_ROOT_PASSWORD: root
+      MYSQL_DATABASE: crm
+      MYSQL_USER: crm
+      MYSQL_PASSWORD: crm
+    ports:
+      - 3307:3306
+    volumes:
+      - "./scripts/crm_database_init.sql:/docker-entrypoint-initdb.d/crm_database_init.sql"
     networks:
       - importacao-distribuida
 
