--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -38,5 +38,18 @@ services:
     networks:
       - importacao-distribuida
 
+  rabbitmq:
+    image: "rabbitmq:management-alpine"
+    environment:
+      RABBITMQ_DEFAULT_USER: "rabbitmq"
+      RABBITMQ_DEFAULT_PASS: "rabbitmq"
+      RABBITMQ_DEFAULT_VHOST: "/"
+    ports:
+      - "15672:15672"
+      - "5672:5672"
+    networks:
+      - importacao-distribuida
+
+
 networks:
   importacao-distribuida:
