--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,15 @@ quarkus.flyway.migrate-at-start=true
 # Azure
 %dev.upload.azure.account=UseDevelopmentStorage=true;
 %test.upload.azure.account=UseDevelopmentStorage=true;
+
+rabbitmq-host=localhost
+rabbitmq-port=5672
+rabbitmq-username=rabbitmq
+rabbitmq-password=rabbitmq
+
+mp.messaging.incoming.eventos-arquivos.connector=smallrye-rabbitmq
+mp.messaging.incoming.eventos-arquivos.exchange.name=importacao-distribuida
+mp.messaging.incoming.eventos-arquivos.exchange.type=topic
+mp.messaging.incoming.eventos-arquivos.exchange.durable=true
+mp.messaging.incoming.eventos-arquivos.queue.name=eventos-arquivos
+mp.messaging.incoming.eventos-arquivos.queue.durable=true
