--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -37,3 +37,20 @@ mp.messaging.incoming.eventos-arquivos.exchange.type=topic
 mp.messaging.incoming.eventos-arquivos.exchange.durable=true
 mp.messaging.incoming.eventos-arquivos.queue.name=eventos-arquivos
 mp.messaging.incoming.eventos-arquivos.queue.durable=true
+
+mp.messaging.incoming.atualizacao-processamento-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.atualizacao-processamento-in.exchange.name=atualizacao-processamento
+mp.messaging.incoming.atualizacao-processamento-in.exchange.type=topic
+mp.messaging.incoming.atualizacao-processamento-in.exchange.durable=false
+mp.messaging.incoming.atualizacao-processamento-in.queue.name=atualizacao-processamento
+mp.messaging.incoming.atualizacao-processamento-in.queue.durable=false
+
+
+mp.messaging.outgoing.atualizacao-processamento-out.connector=smallrye-rabbitmq
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.name=atualizacao-processamento
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.type=topic
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.durable=false
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.declare=false
+mp.messaging.outgoing.atualizacao-processamento-out.queue.name=atualizacao-processamento
+mp.messaging.outgoing.atualizacao-processamento-out.queue.durable=false
+mp.messaging.outgoing.atualizacao-processamento-out.queue.declare=false
