Atualização de status das importações (#8)
* Ajustando nome do arquivo de importação

* Utilizando id da importação no upload

* Ajustando arquivos auxiliares do vsCode

* Implementando envio de eventos de atualização

* Ajustando contentType da mensagem enviada

* Recebendo atualização da situação do processamento

* Implementando consulta de importações

* Ajustando serialização dos eventos

* Implementando envio de eventos de arquivos

* Alterando tratamento do tipo de erro do backend

* Implementando consulta de importação por ID

* Implementando consulta de situação de importações

* Adicionando documentação e comentários

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -25,3 +25,32 @@ quarkus.flyway.migrate-at-start=true
 # Azure
 %dev.upload.azure.account=UseDevelopmentStorage=true;
 %test.upload.azure.account=UseDevelopmentStorage=true;
+
+rabbitmq-host=localhost
+rabbitmq-port=5672
+rabbitmq-username=rabbitmq
+rabbitmq-password=rabbitmq
+
+mp.messaging.incoming.eventos-arquivos.connector=smallrye-rabbitmq
+mp.messaging.incoming.eventos-arquivos.exchange.name=importacao-distribuida
+mp.messaging.incoming.eventos-arquivos.exchange.type=topic
+mp.messaging.incoming.eventos-arquivos.exchange.durable=true
+mp.messaging.incoming.eventos-arquivos.queue.name=eventos-arquivos
+mp.messaging.incoming.eventos-arquivos.queue.durable=true
+
+mp.messaging.incoming.atualizacao-processamento-in.connector=smallrye-rabbitmq
+mp.messaging.incoming.atualizacao-processamento-in.exchange.name=atualizacao-processamento
+mp.messaging.incoming.atualizacao-processamento-in.exchange.type=topic
+mp.messaging.incoming.atualizacao-processamento-in.exchange.durable=false
+mp.messaging.incoming.atualizacao-processamento-in.queue.name=atualizacao-processamento
+mp.messaging.incoming.atualizacao-processamento-in.queue.durable=false
+
+
+mp.messaging.outgoing.atualizacao-processamento-out.connector=smallrye-rabbitmq
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.name=atualizacao-processamento
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.type=topic
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.durable=false
+mp.messaging.outgoing.atualizacao-processamento-out.exchange.declare=false
+mp.messaging.outgoing.atualizacao-processamento-out.queue.name=atualizacao-processamento
+mp.messaging.outgoing.atualizacao-processamento-out.queue.durable=false
+mp.messaging.outgoing.atualizacao-processamento-out.queue.declare=false
