Implementando envio de comandos para as rotinas

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.path=/importacao-swagger
 quarkus.http.cors=true
-quarkus.http.cors.origins=http://localhost:3000
+quarkus.http.cors.origins=*
 
 # Datasource
 quarkus.datasource.db-kind=mysql
@@ -26,11 +26,13 @@ quarkus.flyway.migrate-at-start=true
 %dev.upload.azure.account=UseDevelopmentStorage=true;
 %test.upload.azure.account=UseDevelopmentStorage=true;
 
+# RabbitMQ
 rabbitmq-host=localhost
 rabbitmq-port=5672
 rabbitmq-username=rabbitmq
 rabbitmq-password=rabbitmq
 
+# Fila de eventos das rotinas de importação
 mp.messaging.incoming.eventos-arquivos.connector=smallrye-rabbitmq
 mp.messaging.incoming.eventos-arquivos.exchange.name=importacao-distribuida
 mp.messaging.incoming.eventos-arquivos.exchange.type=topic
@@ -38,13 +40,13 @@ mp.messaging.incoming.eventos-arquivos.exchange.durable=true
 mp.messaging.incoming.eventos-arquivos.queue.name=eventos-arquivos
 mp.messaging.incoming.eventos-arquivos.queue.durable=true
 
+# Filas de eventos para o frontend
 mp.messaging.incoming.atualizacao-processamento-in.connector=smallrye-rabbitmq
 mp.messaging.incoming.atualizacao-processamento-in.exchange.name=atualizacao-processamento
 mp.messaging.incoming.atualizacao-processamento-in.exchange.type=topic
 mp.messaging.incoming.atualizacao-processamento-in.exchange.durable=false
 mp.messaging.incoming.atualizacao-processamento-in.queue.name=atualizacao-processamento
 mp.messaging.incoming.atualizacao-processamento-in.queue.durable=false
-
 
 mp.messaging.outgoing.atualizacao-processamento-out.connector=smallrye-rabbitmq
 mp.messaging.outgoing.atualizacao-processamento-out.exchange.name=atualizacao-processamento
@@ -54,3 +56,10 @@ mp.messaging.outgoing.atualizacao-processamento-out.exchange.declare=false
 mp.messaging.outgoing.atualizacao-processamento-out.queue.name=atualizacao-processamento
 mp.messaging.outgoing.atualizacao-processamento-out.queue.durable=false
 mp.messaging.outgoing.atualizacao-processamento-out.queue.declare=false
+
+# Fila de comandos para as rotinas de importação
+mp.messaging.outgoing.comandos-arquivos.connector=smallrye-rabbitmq
+mp.messaging.outgoing.comandos-arquivos.exchange.name=comandos-arquivos
+mp.messaging.outgoing.comandos-arquivos.exchange.durable=true
+mp.messaging.outgoing.comandos-arquivos.exchange.declare=true
+mp.messaging.outgoing.comandos-arquivos.queue.declare=false
